# speed-the-arxiv

./: .gitignore  LICENSE  MANIFEST.in  README.md  config.yaml  keys.txt  pyproject.toml  setup.py  speedthearxiv.py
favourites/: favourites.json
notes/: 2603.25582.md
search/: config.yaml
speedthearxiv/: __init__.py  __main__.py
speedthearxiv/static/: copybibtex.js  custom.css  search.js
speedthearxiv/templates/: _macros.html  favourites.html  layer.html  layout.html  search.html  search_content.html
static/: copybibtex.js  custom.css  highlight.js  openfolder.js  search.js
templates/: about.html  favourites.html  index.html  layer.html  layout.html  search.html  search_content.html
